--- a/.github/workflows/weekly-reset-deploy.yml
+++ b/.github/workflows/weekly-reset-deploy.yml
@@ -4,7 +4,7 @@ name: Deploy New Version to Pages on Weekly Reset
 on:
   # Runs on weekly reset (UTC 00:00, Monday)
   schedule:
-    - cron: "0 0 * * 1"
+    - cron: '0 0 * * 1'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
