--- a/.github/workflows/weekly-pages-deploy.yml
+++ b/.github/workflows/weekly-pages-deploy.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Check time          #  ← new (for debugging time)
+        run: date -u              #  ← new (prints current UTC)
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
